# hasktorch-datasets

./: README.md  default.nix  flake.nix  shell.nix
.devcontainer/: Dockerfile
.github/workflows/: nix-linux.yml  nix-macos.yml
analysis/: calc-map-simple.nix  calc-map.nix
datasets/: coco.nix  mnist.nix
datasets/bdd100k/: binary-hashes.nix  default.nix  prefetcher.sh
datasets/bdd100k-mini/: binary-hashes.nix  default.nix  prefetcher.sh
datasets/bdd100k-subset/: default.nix  filter.py  subsets.nix
datasets/coco/: binary-hashes.nix  default.nix  prefetcher.sh
datasets/common-voice/: default.nix
datasets/img2coco/: default.nix  img2coco.py
datasets/yolo2coco/: default.nix  yolo2coco.py
examples/: datasets-1to1.nix
models/huggingface/: default.nix  gen.py  gen_bart.py  gen_bert.py  gen_pegasus.py  gen_roberta.py  gen_speech2text.py  gen_t5.py  inferences.nix  pyproject.toml  shell.nix  t5.nix
models/huggingface/inferences/: speech2text.py
models/huggingface/nix/: sources.json
models/torchvision/: default.nix  gen.py
models/yolov5/: default.nix
models/yolov5/inferences/: bdd100k.nix
models/yolov5/inferences/patches/: bdd100k.patch
nix/: nixflow.nix  sources.json  torchaudio-bin.nix  torchaudio-binary-hashes.nix
utils/: common.nix  mix.nix
utils/cml/: default.nix  non-sandbox.nix  yarn.nix
utils/image/: convert.nix  movie.nix
