[tool.poetry]
name = "huggingface-models"
version = "0.1.0"
description = ""
authors = ["Torsten Scholak <torsten.scholak@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tokenizers = "^0.10.3"
transformers = "^4.8.2"
datasets = "^1.9.0"
sentencepiece = "^0.1.96"
torch = "^1.9.0"
torchaudio = "^0.9.0"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
